cabal-version:       2.4
name:                aoc2019
version:             0.1.0.0
synopsis:            My Advent of Code 2019 solutions.
description:         My Advent of Code 2019 solutions.
homepage:            https://github.com/Solonarv/adventofcode-2019#README
license:             MIT
license-file:        LICENSE
author:              Solonarv
maintainer:          nstamm@gmx.de
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common deps
  build-depends:       base >=4.12 && <5
                     , containers ^>= 0.6
                     , vector
                     , bytestring
                     , text
                     , unordered-containers
                     , megaparsec ^>= 8.0
                     , parser-combinators
                     , linear
                     , split
                     , conduit
                     , mtl
                     , monad-loops

common lang
  default-language:    Haskell2010
  -- -XKitchenSink
  default-extensions:  TypeFamilies FlexibleContexts FlexibleInstances DataKinds GADTs
                       TypeFamilyDependencies TypeOperators PolyKinds RankNTypes
                       TypeApplications ScopedTypeVariables ConstraintKinds FunctionalDependencies
                       MultiParamTypeClasses NamedFieldPuns LambdaCase BangPatterns DerivingStrategies
                       GeneralizedNewtypeDeriving RoleAnnotations TupleSections BlockArguments
                       DeriveFunctor DeriveFoldable DeriveTraversable DerivingVia ViewPatterns
  ghc-options:         -Wall -O2

executable solve
  import: deps, lang
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       aoc2019
                     , day01, day02, day03, day04, day05, day06
  ghc-options:         -threaded -rtsopts -funbox-small-strict-fields

library
  import: deps, lang
  hs-source-dirs:      harness
  exposed-modules:     AOC.Solution, AOC.Harness
  build-depends:       optparse-applicative
                     , finite-typelits
                     , ansi-terminal
                     , directory
                     , htoml
                     , req
                     , http-client
                     , time
                     , data-default
  ghc-options:         -Wno-orphans

library util
  import: deps, lang
  hs-source-dirs:      util
  exposed-modules:     Util, ParsingPrelude
  build-depends:       primitive

library intcode
  import: deps, lang
  hs-source-dirs: intcode
  exposed-modules: Intcode
  build-depends: util, primitive


library day01
  import: deps, lang
  exposed-modules: Day01
  hs-source-dirs: day01
  build-depends: aoc2019, util

library day02
  import: deps, lang
  exposed-modules: Day02
  hs-source-dirs: day02
  build-depends: aoc2019, util

library day03
  import: deps, lang
  exposed-modules: Day03
  hs-source-dirs: day03
  build-depends: aoc2019, util

library day04
  import: deps, lang
  exposed-modules: Day04
  hs-source-dirs: day04
  build-depends: aoc2019, util

library day05
  import: deps, lang
  exposed-modules: Day05
  hs-source-dirs: day05
  build-depends: aoc2019, util, intcode

library day06
  import: deps, lang
  exposed-modules: Day06
  hs-source-dirs: day06
  build-depends: aoc2019, util
